// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Projects component with projects empty array 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="projects__link-new"
      >
        No projects. Create one 
        <a>
          here
        </a>
        .
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render Projects component with props 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        <div
          class="projects__item"
        >
          <a
            class="nav-link"
          >
            <div
              class="projects__item-content"
            >
              <p
                class="projects__item-content__name"
              >
                <span
                  class="mobile-screen"
                >
                  project2...
                </span>
                <span
                  class="desktop-screen"
                >
                  project2...
                </span>
              </p>
              <div
                class="projects__item-content__us-ti"
              >
                <p
                  class="projects__item-content__user"
                >
                  admin
                </p>
                <p
                  class="projects__item-content__time"
                >
                  now
                </p>
              </div>
            </div>
          </a>
        </div>
        <div
          class="projects__link-new"
        >
          Create new project 
          <a>
            here
          </a>
          .
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render Projects component without props 1`] = `
<DocumentFragment>
  <div>
    <div
      class="projects__anonymous"
    >
      <a>
        Login
      </a>
       or 
      <a>
        Register
      </a>
       to see your projects or create new ones!
    </div>
  </div>
</DocumentFragment>
`;
